apps/robot-shop/user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    service: user
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: user
  template:
    metadata:
      labels:
        service: user
    spec:
      containers:
        - name: user
          image: robotshop/rs-user:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 50Mi
      restartPolicy: Always
